force-app/main/default/objects/Study_Offering__c/Study_Offering__c.object-meta.xml
<CustomObject>
    <description>The offering for a unit of study.</description>
    <label>Study Offering</label>
    <nameField>
        <label>Study Offering Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Study Offerings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>