force-app/main/default/objects/Study_Offering__c/fields/About__c.field-meta.xml
<CustomField>
    <fullName>About__c</fullName>
    <description>For continuing education study</description>
    <inlineHelpText>For continuing education study</inlineHelpText>
    <label>About</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>