force-app/main/default/objects/Study_Offering__c/fields/Available_Places__c.field-meta.xml
<CustomField>
    <fullName>Available_Places__c</fullName>
    <formula>IF ( Unlimited_Places__c , 99999,  IF(Capacity__c -  Booked_Places__c &gt;= 0, Capacity__c -  Booked_Places__c, 0) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Places</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>