force-app/main/default/objects/Study_Offering__c/fields/Booked_Places__c.field-meta.xml
<CustomField>
    <fullName>Booked_Places__c</fullName>
    <description>Number of students enrolled to the study offering.</description>
    <inlineHelpText>Number of students enrolled to the study offering.</inlineHelpText>
    <label>Booked Places</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>