force-app/main/default/objects/Study_Offering__c/fields/Census_Date__c.field-meta.xml
<CustomField>
    <fullName>Census_Date__c</fullName>
    <description>This is the Census date for the study offering. This date reflects the date after which all enrollments are final, and may not be able to be changed without penalty or faculty approval.</description>
    <inlineHelpText>Optional. The date of when students&apos; enrollment are finalized.</inlineHelpText>
    <label>Census Date (Override)</label>
    <type>Date</type>
</CustomField>