force-app/main/default/objects/Study_Offering__c/fields/Census_Date_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Census_Date_Calculated__c</fullName>
    <description>Calculated census date for status field. Only consider the date in term if the census date in study offering is empty.</description>
    <formula>IF( ISNULL(Census_Date__c),
IF(ISNULL( Academic_Term__r.Census_Date__c),
null,
Academic_Term__r.Census_Date__c
),
Census_Date__c
)</formula>
    <inlineHelpText>Calculated census date for status field. Only consider the date in term if the census date in study offering is empty.</inlineHelpText>
    <label>Census Date</label>
    <type>Date</type>
</CustomField>