force-app/main/default/objects/Study_Offering__c/fields/Credit_Expiry_Dates__c.field-meta.xml
<CustomField>
    <fullName>Credit_Expiry_Dates__c</fullName>
    <description>For continuing education study</description>
    <inlineHelpText>For continuing education study</inlineHelpText>
    <label>Credit Expiry Dates</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>