force-app/main/default/objects/Study_Offering__c/fields/Discountable__c.field-meta.xml
<CustomField>
    <fullName>Discountable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For continuing education study</description>
    <inlineHelpText>For continuing education study</inlineHelpText>
    <label>Discountable</label>
    <type>Checkbox</type>
</CustomField>