force-app/main/default/objects/Study_Offering__c/fields/Enable_Guest_Registrations__c.field-meta.xml
<CustomField>
    <fullName>Enable_Guest_Registrations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For continuing education study: Allow guest users to register to the unit.</description>
    <inlineHelpText>For continuing education study: Allow guest users to register to the unit.</inlineHelpText>
    <label>Enable Guest Registrations</label>
    <type>Checkbox</type>
</CustomField>