force-app/main/default/objects/Study_Offering__c/fields/Enable_Waitlist__c.field-meta.xml
<CustomField>
    <fullName>Enable_Waitlist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow students to be waitlisted.</description>
    <inlineHelpText>Allow students to be waitlisted.</inlineHelpText>
    <label>Enable Waitlist</label>
    <type>Checkbox</type>
</CustomField>