force-app/main/default/objects/Study_Offering__c/fields/End_Date_Calculated__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Calculated__c</fullName>
    <description>Calculated end date for status field. Only consider the dates in term if both start/end date in study offering are empty.</description>
    <formula>IF( NOT(ISNULL( End_Date__c)) || NOT(ISNULL ( Start_Date__c)),
	 End_Date__c,
	IF(ISNULL(  Academic_Term__r.End_Date__c) &amp;&amp; NOT(ISNULL( Academic_Term__r.Start_Date__c)), 
		null, 
		Academic_Term__r.End_Date__c
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated end date for status field. Only consider the dates in term if both start/end date in study offering are empty.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>