force-app/main/default/objects/Study_Offering__c/fields/Enrollment_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Close_Date__c</fullName>
    <label>Enrollment Close Date (Override)</label>
    <type>DateTime</type>
</CustomField>