force-app/main/default/objects/Study_Offering__c/fields/Enrollment_Close_Date_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Close_Date_Calculated__c</fullName>
    <description>Calculated enrollment close date for status field. Only consider the dates in term if both enrollment start/end date in study offering are empty.</description>
    <formula>IF( NOT(ISNULL( Enrollment_Close_Date__c )) || NOT(ISNULL (Enrollment_Open_Date__c)),
	Enrollment_Close_Date__c,
	IF( ISNULL( Academic_Term__r.Enrollment_Close_Date__c ) &amp;&amp; NOT(ISNULL( Academic_Term__r.Enrollment_Open_Date__c)),
		null,
		Academic_Term__r.Enrollment_Close_Date__c 
	)
	
)</formula>
    <inlineHelpText>Calculated enrollment close date for status field. Only consider the dates in term if both enrollment start/end date in study offering are empty.</inlineHelpText>
    <label>Enrollment Close Date</label>
    <type>DateTime</type>
</CustomField>