force-app/main/default/objects/Study_Offering__c/fields/Entry_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Entry_Requirements__c</fullName>
    <description>For continuing education study</description>
    <inlineHelpText>For continuing education study</inlineHelpText>
    <label>Entry Requirements</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>