force-app/main/default/objects/Study_Offering__c/fields/Field_of_Study__c.field-meta.xml
<CustomField>
    <fullName>Field_of_Study__c</fullName>
    <description>For continuing education study</description>
    <inlineHelpText>For continuing education study</inlineHelpText>
    <label>Field of Study</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Field_of_Study</valueSetName>
    </valueSet>
</CustomField>