force-app/main/default/objects/Study_Offering__c/fields/Grade_By__c.field-meta.xml
<CustomField>
    <fullName>Grade_By__c</fullName>
    <label>Grade By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Study Session</fullName>
                <default>true</default>
                <label>Study Session</label>
            </value>
            <value>
                <fullName>Study Offering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>