force-app/main/default/objects/Study_Offering__c/fields/Listing_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Listing_Image_URL__c</fullName>
    <description>For continuing education study</description>
    <inlineHelpText>For continuing education study</inlineHelpText>
    <label>Listing Image URL</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>