force-app/main/default/objects/Study_Offering__c/fields/Number_of_Credits__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Credits__c</fullName>
    <description>The number of credits purchased with this offering.</description>
    <label>Number of Credits</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>