force-app/main/default/objects/Study_Offering__c/fields/Offering_Type__c.field-meta.xml
<CustomField>
    <fullName>Offering_Type__c</fullName>
    <description>For continuing education study</description>
    <inlineHelpText>For continuing education study</inlineHelpText>
    <label>Offering Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unit</fullName>
                <default>true</default>
                <label>Unit</label>
            </value>
            <value>
                <fullName>Bundle</fullName>
            </value>
            <value>
                <fullName>Workshop</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Study Voucher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>