force-app/main/default/objects/Study_Offering__c/fields/Pre_enrollment_Open_Date_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Pre_enrollment_Open_Date_Calculated__c</fullName>
    <description>Calculated pre-enrollment open date for status field. Only consider the date in term if the pre-enrollment open date in study offering is empty.</description>
    <formula>IF( ISNULL(  Pre_enrollment_Open_Date__c ) , Academic_Term__r.Pre_enrollment_Open_Date__c , Pre_enrollment_Open_Date__c )</formula>
    <inlineHelpText>Calculated pre-enrollment open date for status field. Only consider the date in term if the pre-enrollment open date in study offering is empty.</inlineHelpText>
    <label>Pre-enrollment Open Date</label>
    <type>DateTime</type>
</CustomField>