force-app/main/default/objects/Study_Offering__c/fields/Primary_Faculty__c.field-meta.xml
<CustomField>
    <fullName>Primary_Faculty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Faculty</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Study Offerings</relationshipLabel>
    <relationshipName>Study_Offerings</relationshipName>
    <type>Lookup</type>
</CustomField>