force-app/main/default/objects/Study_Offering__c/fields/Scheduled_Duration__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Duration__c</fullName>
    <description>Duration required to complete this unit.</description>
    <inlineHelpText>Duration required to complete this unit.</inlineHelpText>
    <label>Scheduled Duration</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>