force-app/main/default/objects/Study_Offering__c/fields/Scheduled_Duration_Unit__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Duration_Unit__c</fullName>
    <label>Scheduled Duration Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hour</fullName>
                <default>true</default>
                <label>Hour</label>
            </value>
            <value>
                <fullName>Minute</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>