force-app/main/default/objects/Study_Offering__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>For auto enrollment wizard to allocate students based on the sequence.</description>
    <inlineHelpText>For auto enrollment wizard to allocate students based on the sequence.</inlineHelpText>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>