force-app/main/default/objects/Study_Offering__c/fields/Session_Instruction__c.field-meta.xml
<CustomField>
    <fullName>Session_Instruction__c</fullName>
    <inlineHelpText>Used to describe what sessions students should pick for this course.</inlineHelpText>
    <label>Session Instruction</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>