force-app/main/default/objects/Study_Offering__c/fields/Start_Date_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Calculated__c</fullName>
    <description>Calculated start date for status field. Only consider the dates in term if both start and end date in study offering is empty.</description>
    <formula>IF(ISNULL( Start_Date__c) &amp;&amp; ISNULL(End_Date__c) ,  Academic_Term__r.Start_Date__c , Start_Date__c )</formula>
    <inlineHelpText>Calculated start date for status field. Only consider the dates in term if both start and end date in study offering is empty.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>