force-app/main/default/objects/Study_Offering__c/fields/Status_Override__c.field-meta.xml
<CustomField>
    <fullName>Status_Override__c</fullName>
    <description>This status field will be used to override the status defined in the “Study Offering Status” formula field.</description>
    <inlineHelpText>This status field will be used to override the status defined in the “Study Offering Status” formula field.</inlineHelpText>
    <label>Status (Override)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Study_Offering_Status</valueSetName>
    </valueSet>
</CustomField>