force-app/main/default/objects/Study_Offering__c/fields/Study_Session_Enrollment_Rule__c.field-meta.xml
<CustomField>
    <fullName>Study_Session_Enrollment_Rule__c</fullName>
    <description>Logic to track number of sessions required for each session type separated by semi-colon. For example: Lecture=1;Tutorial=1</description>
    <inlineHelpText>Logic to track number of sessions required for each session type separated by semi-colon. For example: Lecture=1;Tutorial=1</inlineHelpText>
    <label>Study Session Enrollment Rules</label>
    <length>255</length>
    <type>Text</type>
</CustomField>