force-app/main/default/objects/Study_Offering__c/fields/Unlimited_Places__c.field-meta.xml
<CustomField>
    <fullName>Unlimited_Places__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the study offering has no capacity limit.</description>
    <inlineHelpText>Indicates the study offering has no capacity limit.</inlineHelpText>
    <label>Unlimited Places</label>
    <type>Checkbox</type>
</CustomField>