force-app/main/default/objects/Study_Offering__c/fields/Waitlist_Places__c.field-meta.xml
<CustomField>
    <fullName>Waitlist_Places__c</fullName>
    <description>Number of students in the waiting list.</description>
    <inlineHelpText>Number of students in the waiting list.</inlineHelpText>
    <label>Waitlist Places</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>