force-app/main/default/objects/Study_Offering__c/validationRules/Required_Academic_Term.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Academic_Term</fullName>
    <active>true</active>
    <description>This to ensure that a study offering is associated with an academic term.</description>
    <errorConditionFormula>ISBLANK( Academic_Term__c ) ||  Academic_Term__r.RecordType.DeveloperName != &apos;Academic_Term&apos;</errorConditionFormula>
    <errorDisplayField>Academic_Term__c</errorDisplayField>
    <errorMessage>The academic term is required.</errorMessage>
</ValidationRule>