force-app/main/default/objects/Study_Offering__c/validationRules/Required_Campus.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Campus</fullName>
    <active>true</active>
    <description>To ensure the campus is populated.</description>
    <errorConditionFormula>ISBLANK(Campus__c)</errorConditionFormula>
    <errorDisplayField>Campus__c</errorDisplayField>
    <errorMessage>The campus is required.</errorMessage>
</ValidationRule>