force-app/main/default/objects/Study_Offering__c/validationRules/Required_Study_Unit.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Study_Unit</fullName>
    <active>true</active>
    <description>This is to ensure the study unit is populated.</description>
    <errorConditionFormula>ISBLANK(Study_Unit__c)</errorConditionFormula>
    <errorDisplayField>Study_Unit__c</errorDisplayField>
    <errorMessage>The study unit is required.</errorMessage>
</ValidationRule>