force-app/main/default/objects/Study_Offering__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Academic_Term__c</columns>
    <columns>Study_Unit__c</columns>
    <columns>Capacity__c</columns>
    <columns>Census_Date_Calculated__c</columns>
    <columns>Start_Date_Calculated__c</columns>
    <columns>End_Date_Calculated__c</columns>
    <columns>Listing_Status__c</columns>
    <columns>Fee_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>