force-app/main/default/objects/Study_Offering__c/listViews/This_Years_Study_Offerings.listView-meta.xml
<ListView>
    <fullName>This_Years_Study_Offerings</fullName>
    <columns>NAME</columns>
    <columns>Academic_Term__c</columns>
    <columns>Study_Unit__c</columns>
    <columns>Capacity__c</columns>
    <columns>Census_Date_Calculated__c</columns>
    <columns>Start_Date_Calculated__c</columns>
    <columns>End_Date_Calculated__c</columns>
    <columns>Listing_Status__c</columns>
    <columns>Fee_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start_Date_Calculated__c</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>This Year&apos;s Study Offerings</label>
</ListView>